# CheeseShredder

./: .dockerignore  .flake8  .gitignore  .gitmodules  Dockerfile  README.md  disasm_example.py  pyproject.toml  requirements.txt  scratchpad.ipynb  test  test.out  tox.ini
doc/source/: cheeseshredder.arch.x86_64.data.rst  cheeseshredder.arch.x86_64.rst  cheeseshredder.format.rst  conf.py
docs/source/: cheeseshredder.arch.rst  cheeseshredder.base.rst  cheeseshredder.rst  conf.py  index.rst  modules.rst
src/cheeseshredder/: __main__.py
src/cheeseshredder/arch/x86_64/: __init__.py
src/cheeseshredder/arch/x86_64/data/: ModRMTable16.csv  ModRMTable32.csv  Prefixes.csv  SIBTable.csv  x86.csv
src/cheeseshredder/base/: __init__.py
src/cheeseshredder/format/: __init__.py
tests/: .gitignore  fuzz_it.sh  test_examples-negative.py  test_examples.py  test_examples_positive.py  test_fuzz.py  test_main.py  test_x86_basic.py
tests/fuzz/: test_case_0  test_case_0.out  test_case_1  test_case_1.out  test_case_2  test_case_2.out  test_case_3  test_case_3.out  test_case_4  test_case_4.out  test_case_5  test_case_5.out  test_case_6  test_case_6.out  test_case_7  test_case_7.out  test_case_8  test_case_8.out  test_case_9  test_case_9.out
tests/negative/: bad_clflush  bad_clflush.s  bad_lea.s  call_missingbytes.s  call_withinself  call_withinself.s  neg_disp  neg_disp.s
tests/positive/: example-office.s  example1.s  example2.s  example3.s  large_example
