[project]
name = "cheeseshredder"
version = "0.0.1"
description = "A binrary disassembler for x86_64 instructions."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = [
  "disassembler", "reverse engineering", "re", "x86", "x86_64", "amd64"
]
authors = [
  {name = "David Cheeseman", email = "david@cheeseman.club" }
]
maintainers = [
  {name = "David Cheeseman", email = "david@cheeseman.club" }
]
# https://pypi.org/classifiers/
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",
  "Topic :: Security",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Disassemblers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "tqdm"
]

[project.optional-dependencies] # Optional
doc = ["sphinx","m2r2"]
test = ["pytest", "flake8"]
tox-conda = ["tox-conda"]

[project.urls]  # Optional
"Homepage" = "https://github.com/nuvious/cheeseshredder"
"Bug Reports" = "https://github.com/nuvious/cheeseshredder/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/nuvious/cheeseshredder/"

[project.scripts]  # Optional
cheeseshredder = "cheeseshredder.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cheeseshredder*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools.package-data]
'*' = ["*.csv"]

[build-system]
requires = [
  "setuptools >= 46.4.0",
  "wheel"
]
build-backend = "setuptools.build_meta"
